--- a/package.json
+++ b/package.json
@@ -19,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/samanthaprince/VisitYourParks/issues"
   },
-  "homepage": "https://github.com/samanthaprince/VisitYourParks#readme"
+  "homepage": "https://github.com/samanthaprince/VisitYourParks#readme",
+  "dependencies": {
+    "bcrypt": "^0.8.5",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
+    "mongoose": "^4.4.10"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "gulp-cli": "^1.2.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
+    "morgan": "^1.7.0"
+  }
 }
